Implement Ole Begeman's method in Swift.

--- a/NestedScrollViewSample/Base.lproj/Main.storyboard
+++ b/NestedScrollViewSample/Base.lproj/Main.storyboard
@@ -15,36 +15,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zzW-QZ-mx3">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zzW-QZ-mx3" customClass="ContainerScrollView" customModule="NestedScrollViewSample" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DlN-FJ-sBx">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1762"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DlN-FJ-sBx" customClass="ContainerScrollContentView" customModule="NestedScrollViewSample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1760"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iIA-pT-SeB">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iIA-pT-SeB">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="880"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="880" id="vsq-AH-DQd"/>
-                                                </constraints>
                                             </tableView>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7BO-rB-sEZ">
-                                                <rect key="frame" x="-4" y="882" width="422" height="880"/>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7BO-rB-sEZ">
+                                                <rect key="frame" x="0.0" y="880" width="414" height="880"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="880" id="rAv-vG-H7f"/>
-                                                </constraints>
                                             </tableView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="7BO-rB-sEZ" secondAttribute="bottom" id="1mL-Hx-BDx"/>
-                                            <constraint firstItem="7BO-rB-sEZ" firstAttribute="top" secondItem="iIA-pT-SeB" secondAttribute="bottom" constant="2" id="KXz-cc-h6q"/>
-                                            <constraint firstItem="iIA-pT-SeB" firstAttribute="leading" secondItem="DlN-FJ-sBx" secondAttribute="leading" id="LQr-cO-bz0"/>
-                                            <constraint firstItem="iIA-pT-SeB" firstAttribute="top" secondItem="DlN-FJ-sBx" secondAttribute="top" id="WIB-oL-wvb"/>
-                                            <constraint firstItem="7BO-rB-sEZ" firstAttribute="leading" secondItem="DlN-FJ-sBx" secondAttribute="leading" constant="-4" id="Wzb-yF-2Ac"/>
-                                            <constraint firstAttribute="trailing" secondItem="iIA-pT-SeB" secondAttribute="trailing" id="ljX-tZ-u2h"/>
-                                            <constraint firstAttribute="trailing" secondItem="7BO-rB-sEZ" secondAttribute="trailing" constant="-4" id="obc-nf-Qm9"/>
+                                            <constraint firstAttribute="height" constant="1760" id="I9h-TU-Ebt"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -62,18 +52,17 @@
                         <constraints>
                             <constraint firstItem="zzW-QZ-mx3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3rz-8j-H5R"/>
                             <constraint firstItem="DlN-FJ-sBx" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="JtP-5T-Dym"/>
-                            <constraint firstItem="zzW-QZ-mx3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NG1-0f-evd"/>
+                            <constraint firstItem="zzW-QZ-mx3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="NG1-0f-evd"/>
                             <constraint firstItem="zzW-QZ-mx3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="OFH-vr-66q"/>
                             <constraint firstAttribute="bottom" secondItem="zzW-QZ-mx3" secondAttribute="bottom" id="XMF-Hu-dRu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="heightDimensionConstraint" destination="I9h-TU-Ebt" id="GlQ-Js-0s3"/>
                         <outlet property="scrollView" destination="zzW-QZ-mx3" id="4Bv-f9-1jp"/>
                         <outlet property="tableView1" destination="iIA-pT-SeB" id="QdE-XW-E7O"/>
-                        <outlet property="tableView1HeightAnchor" destination="vsq-AH-DQd" id="h4I-8l-woI"/>
                         <outlet property="tableView2" destination="7BO-rB-sEZ" id="Zti-X1-o0l"/>
-                        <outlet property="tableView2HeightAnchor" destination="rAv-vG-H7f" id="sDY-JB-HZY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
