--- a/NestedScrollViewSample/Base.lproj/Main.storyboard
+++ b/NestedScrollViewSample/Base.lproj/Main.storyboard
@@ -15,23 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zzW-QZ-mx3" customClass="ContainerScrollView" customModule="NestedScrollViewSample" customModuleProvider="target">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zzW-QZ-mx3" customClass="ContainerScrollView" customModule="NestedScrollViewSample" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DlN-FJ-sBx" customClass="ContainerScrollContentView" customModule="NestedScrollViewSample" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1760"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="1760" id="I9h-TU-Ebt"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="DlN-FJ-sBx" firstAttribute="leading" secondItem="zzW-QZ-mx3" secondAttribute="leading" id="GJz-ll-QTO"/>
-                                    <constraint firstAttribute="trailing" secondItem="DlN-FJ-sBx" secondAttribute="trailing" id="MCe-Eu-ayZ"/>
-                                    <constraint firstAttribute="bottom" secondItem="DlN-FJ-sBx" secondAttribute="bottom" constant="8" id="MMW-nk-A2f"/>
-                                    <constraint firstItem="DlN-FJ-sBx" firstAttribute="top" secondItem="zzW-QZ-mx3" secondAttribute="top" id="ge5-nz-e2z"/>
-                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="005-Rf-RpW"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="vjI-8i-s81"/>
                             </scrollView>
@@ -39,7 +24,6 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="zzW-QZ-mx3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3rz-8j-H5R"/>
-                            <constraint firstItem="DlN-FJ-sBx" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="JtP-5T-Dym"/>
                             <constraint firstItem="zzW-QZ-mx3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="NG1-0f-evd"/>
                             <constraint firstItem="zzW-QZ-mx3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="OFH-vr-66q"/>
                             <constraint firstAttribute="bottom" secondItem="zzW-QZ-mx3" secondAttribute="bottom" id="XMF-Hu-dRu"/>
@@ -47,8 +31,6 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="contentView" destination="DlN-FJ-sBx" id="RyJ-Ig-U7B"/>
-                        <outlet property="heightDimensionConstraint" destination="I9h-TU-Ebt" id="GlQ-Js-0s3"/>
                         <outlet property="scrollView" destination="zzW-QZ-mx3" id="4Bv-f9-1jp"/>
                     </connections>
                 </viewController>
